--- a/index.html
+++ b/index.html
@@ -8,7 +8,39 @@
   <title>Weather Dashboard</title>
 </head>
 <body>
-  
+  <header>
+    <h1>Weather Dashboard</h1>
+  </header>
+  <main>
+    <div id="main-container">
+      <aside>
+        <form>
+          <label for="search-city">Search for a City:</label><br>
+          <input type="text" id="search-city" name="search-city" value="Detroit"><br><br>
+          <input id="search-button" type="submit" value="Search">
+        </form>
+        <hr>
+        <button>Detroit</button>
+        <button>Detroit</button>
+        <button>Detroit</button>
+        <button>Detroit</button>
+        <button>Detroit</button>
+        <button>Detroit</button>
+      </aside>
+      <div id="weather-container">
+        <div id="city-view">
+          <h2>Detroit</h2>
+          <h5>Temp</h5>
+          <h5>Wind</h5>
+          <h5>Humidity</h5>
+        </div>
+        <h3>5-day-forecast:</h3>
+        <div id="five-day-forecast">
+          
+        </div>
+      </div>
+    </div>
+  </main>
   <script src="./assets/javascript/main.js"></script>
 </body>
 </html>
