Implement weather API, implement save and loading, fixed display CSS, search history buttons will reorder when clicked.

--- a/index.html
+++ b/index.html
@@ -16,23 +16,21 @@
       <aside>
         <form>
           <label for="search-city">Search for a City:</label><br>
-          <input type="text" id="search-city" name="search-city" value="Detroit"><br><br>
+          <input type="text" id="search-city" name="search-city" value="enter city"><br><br>
           <input id="search-button" type="submit" value="Search">
         </form>
         <hr>
-        <button>Detroit</button>
-        <button>Detroit</button>
-        <button>Detroit</button>
-        <button>Detroit</button>
-        <button>Detroit</button>
-        <button>Detroit</button>
+        <div id="search-history">
+          
+        </div>
       </aside>
       <div id="weather-container">
         <div id="city-view">
-          <h2>Detroit</h2>
-          <h5>Temp</h5>
-          <h5>Wind</h5>
-          <h5>Humidity</h5>
+          <h2 style="display: inline;"></h2>
+          <img>
+          <h5></h5>
+          <h5></h5>
+          <h5></h5>
         </div>
         <h3>5-day-forecast:</h3>
         <div id="five-day-forecast">
